share the love mobile fixed

--- a/index.html
+++ b/index.html
@@ -338,16 +338,24 @@
 
       <div class="line-border"></div>
 
-      <!-- <div class="share-the-love">
-        <h2>SHARE THE LOVE</h2>
+      <div class="share-the-love container">
+        <h3>SHARE THE LOVE</h3>
         <div class="share-the-love-content">
           <div class="share-the-love-left">
-            <div class="share-the-love-content-card">
-              <img src="./images/image-test2.jpg" alt="" />
+            <div class="share-the-love-card">
+              <img
+                src="./images/img-facebook.jpg"
+                alt="facebook"
+                height="250px"
+              />
               <button class="button1">LIKE</button>
             </div>
-            <div class="share-the-love-content-card">
-              <img src="./images/image-test-YT.jpg" alt="" />
+            <div class="share-the-love-card">
+              <img
+                src="./images/img-youtube.jpg"
+                alt="youtube"
+                height="250px"
+              />
               <button class="button1">SUBSCRIBE</button>
             </div>
           </div>
@@ -370,7 +378,9 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
+
+      <div class="line-border"></div>
 
       <!-- <div class="community-div">
         <div class="community">
