community mobile updated

--- a/index.html
+++ b/index.html
@@ -382,10 +382,10 @@
 
       <div class="line-border"></div>
 
-      <!-- <div class="community-div">
+      <div class="community-div">
         <div class="community">
           <div class="become-a-member">
-            <p class="p-join">
+            <p class="join">
               Join the NOWNESS community to create your own playlists, rate and
               comment on stories, subscribe to your favorite categories and more.
             </p>
@@ -394,7 +394,7 @@
           </div>
       
           <div class="connect">
-            <h2 class="h2-connect">Connect with NOWNESS</h2>
+            <p class="join">Connect with NOWNESS</p>
             <div class="icons-container">
               <svg width="25px" viewBox="0 0 25 25">
                 <use href="#facebook_logo"></use>
@@ -423,7 +423,9 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
+
+      <div class="line-border"></div>
 
       <!-- <div class="more-to-love">
         <h2>MORE TO LOVE</h2>
