more to love mobile fixed

--- a/index.html
+++ b/index.html
@@ -427,14 +427,14 @@
 
       <div class="line-border"></div>
 
-      <!-- <div class="more-to-love">
-        <h2>MORE TO LOVE</h2>
+      <div class="more-to-love container">
+        <h3>MORE TO LOVE</h3>
         <div class="more-to-love-content">
           <div class="more-to-love-content-card">
             <img src="./images/image-test.jpg" alt="" width="200" />
             <div class="more-to-love-text">
-              <h3 class="light">Title of Text</h3>
-              <p>
+              <h3 class="more">Title of Text</h3>
+              <p class="description-1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
                 reprehenderit quos, ab rem fuga quasi dolor similique consequatur
               </p>
@@ -443,8 +443,8 @@
           <div class="more-to-love-content-card">
             <img src="./images/image-test.jpg" alt="" width="200" />
             <div class="more-to-love-text">
-              <h3 class="light">Title of Text</h3>
-              <p>
+              <h3 class="more">Title of Text</h3>
+              <p class="description-1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
                 reprehenderit quos, ab rem fuga quasi dolor similique consequatur
               </p>
@@ -453,15 +453,18 @@
           <div class="more-to-love-content-card">
             <img src="./images/image-test.jpg" alt="" width="200" />
             <div class="more-to-love-text">
-              <h3 class="light">Title of Text</h3>
-              <p>
+              <h3 class="more">Title of Text</h3>
+              <p class="description-1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
                 reprehenderit quos, ab rem fuga quasi dolor similique consequatur
               </p>
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
+
+      <div class="line-border"></div>
+      
     </div>
 
     <!-- <footer>
