footer mobile fixed

--- a/index.html
+++ b/index.html
@@ -464,10 +464,10 @@
       </div>
 
       <div class="line-border"></div>
-      
+
     </div>
 
-    <!-- <footer>
+    <footer>
       <div class="social-banner">
         <div class="icons-container">
           <svg width="25px" viewBox="0 0 25 25">
@@ -496,6 +496,7 @@
           </svg>
         </div>
       </div>
+      <div class="line-border"></div>
       <div >
         <nav class="links-end">
           <ul>
@@ -516,7 +517,7 @@
         <p>Ⓒ 2022 MODERN MOBILE DIGITAL MEDIA CO. LTD. ALL RIGHTS RESERVED.</p>
         <p>粤ICP备10213522号</p>
       </div>
-    </footer>  -->
+    </footer> 
 
     <!-- social logos -->
     <svg display="none">
