--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
 
           <div class="row1-header-right">
-            <svg class="icon" height="26px" viewBox="0 0 20 20">
+            <svg class="icon" width="26px" viewBox="0 0 20 20">
               <use href="#search_logo"></use>
             </svg>
 
