seperate sccs files and responsive header

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NOWNESS</title>
     <link rel="stylesheet" href="Nunito.css" />
-
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/menu.css"/>
+    <link rel="stylesheet" href="./css/buttons.css"/>
   </head>
   <body>
     <!-- header -->
