no direct flight and around the world larger sizing

--- a/index.html
+++ b/index.html
@@ -124,12 +124,10 @@
               media="(max-width: 599px)"
               srcset="./images/img-today-s.jpg"
             />
-
             <source
               media="(min-width: 600px)"
               srcset="./images/img-today-l.jpg"
             />
-
             <img src="./images/img-today-l.jpg" alt="today-image" />
           </picture>
 
@@ -237,37 +235,41 @@
       <div class="around-the-world container">
         <h3>AROUND THE WORLD</h3>
         <div class="around-the-world-content-container">
-          <div class="around-the-world content-card">
-            <img src="./images/image-test4.jpg" alt="" width="535" />
-            <h4>Title of Text</h4>
-            <p class="description-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Doloremque reprehenderit quos
-            </p>
+          <div class="around-the-world-top">
+            <div class="around-the-world content-card">
+              <img src="./images/image-test4.jpg" alt="" width="535" />
+              <h4>Title of Text</h4>
+              <p class="description-1">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Doloremque reprehenderit quos
+              </p>
+            </div>
+            <div class="around-the-world content-card">
+              <img src="./images/image-test4.jpg" alt="" width="535" />
+              <h4>Title of Text</h4>
+              <p class="description-1">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Doloremque reprehenderit quos
+              </p>
+            </div>
           </div>
-          <div class="around-the-world content-card">
-            <img src="./images/image-test4.jpg" alt="" width="535" />
-            <h4>Title of Text</h4>
-            <p class="description-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Doloremque reprehenderit quos
-            </p>
-          </div>
-          <div class="around-the-world content-card">
-            <img src="./images/image-test4.jpg" alt="" width="535" />
-            <h4>Title of Text</h4>
-            <p class="description-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Doloremque reprehenderit quos
-            </p>
-          </div>
-          <div class="around-the-world content-card">
-            <img src="./images/image-test4.jpg" alt="" width="535" />
-            <h4>Title of Text</h4>
-            <p class="description-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Doloremque reprehenderit quos
-            </p>
+          <div class="around-the-world-bottom">
+            <div class="around-the-world content-card">
+              <img src="./images/image-test4.jpg" alt="" width="535" />
+              <h4>Title of Text</h4>
+              <p class="description-1">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Doloremque reprehenderit quos
+              </p>
+            </div>
+            <div class="around-the-world content-card">
+              <img src="./images/image-test4.jpg" alt="" width="535" />
+              <h4>Title of Text</h4>
+              <p class="description-1">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Doloremque reprehenderit quos
+              </p>
+            </div>
           </div>
         </div>
       </div>
