larger more to love and button fixes

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 alt="facebook"
                 height="250px"
               />
-              <button class="button1">LIKE</button>
+              <button class="button like">LIKE</button>
             </div>
             <div class="share-the-love-card">
               <img
@@ -360,7 +360,7 @@
                 alt="youtube"
                 height="250px"
               />
-              <button class="button1">SUBSCRIBE</button>
+              <button class="button subscribe">SUBSCRIBE</button>
             </div>
           </div>
           <div class="share-the-love-right">
@@ -386,14 +386,14 @@
 
       <div class="line-border"></div>
 
-      <div class="community-div">
-        <div class="community">
+      <div class="community">
+
           <div class="become-a-member">
             <p class="join">
               Join the NOWNESS community to create your own playlists, rate and
               comment on stories, subscribe to your favorite categories and more.
             </p>
-            <button class="button">BECOME A NOWNESS MEMBER</button>
+            <button class="button member">BECOME A NOWNESS MEMBER</button>
             <p class="small">Already a member? <span class="sign-in"><a href="#">Sign in</a></p>
           </div>
       
@@ -426,7 +426,6 @@
               </svg>
             </div>
           </div>
-        </div>
       </div>
 
       <div class="line-border"></div>
@@ -435,32 +434,36 @@
         <h3>MORE TO LOVE</h3>
         <div class="more-to-love-content">
           <div class="more-to-love-content-card">
-            <img src="./images/image-test.jpg" alt="" width="200" />
+            <img src="./images/img-mtl.jpg" alt="" width="300" />
             <div class="more-to-love-text">
               <h3 class="more">Title of Text</h3>
               <p class="description-1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-                reprehenderit quos, ab rem fuga quasi dolor similique consequatur
+                reprehenderit quos, ab rem fuga quasi dolor similique consequatur Lorem ipsum dolor sit, 
+                amet consectetur adipisicing elit.
               </p>
             </div>
           </div>
           <div class="more-to-love-content-card">
-            <img src="./images/image-test.jpg" alt="" width="200" />
+            <img src="./images/img-mtl.jpg" alt="" width="300" />
             <div class="more-to-love-text">
               <h3 class="more">Title of Text</h3>
               <p class="description-1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-                reprehenderit quos, ab rem fuga quasi dolor similique consequatur
+                reprehenderit quos, ab rem fuga quasi dolor similique consequatur Lorem ipsum dolor sit, 
+                amet consectetur adipisicing elit. Placeat, labore! Molestias voluptates sit eos alias, ducimus. 
+                Placeat, labore! Molestias voluptates sit eos alias, ducimus.
               </p>
             </div>
           </div>
           <div class="more-to-love-content-card">
-            <img src="./images/image-test.jpg" alt="" width="200" />
+            <img src="./images/img-mtl.jpg" alt="" width="300" />
             <div class="more-to-love-text">
               <h3 class="more">Title of Text</h3>
               <p class="description-1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-                reprehenderit quos, ab rem fuga quasi dolor similique consequatur
+                reprehenderit quos, ab rem fuga quasi dolor similique consequatur Lorem ipsum dolor sit, 
+                amet consectetur adipisicing elit. Placeat, labore! Molestias voluptates sit eos alias, ducimus.
               </p>
             </div>
           </div>
