share the love larger reponsive

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         <h3>SHARE THE LOVE</h3>
         <div class="share-the-love-content">
           <div class="share-the-love-left">
-            <div class="share-the-love-card">
+            <div class="share-the-love-card social">
               <img
                 src="./images/img-facebook.jpg"
                 alt="facebook"
@@ -354,7 +354,18 @@
               />
               <button class="button like">LIKE</button>
             </div>
-            <div class="share-the-love-card">
+            <div class="social-detail facebook social">
+              <p>Facebook</p>
+              <svg width="25px" viewBox="0 0 25 25">
+                <use href="#facebook_logo"></use>
+              </svg>
+              <p class="description-1">Our daily feed.</p>
+              <button class="button like">LIKE</button>
+            </div>
+         
+          </div>
+          <div class="share-the-love-right">
+            <div class="share-the-love-card social">
               <img
                 src="./images/img-youtube.jpg"
                 alt="youtube"
@@ -362,23 +373,13 @@
               />
               <button class="button subscribe">SUBSCRIBE</button>
             </div>
-          </div>
-          <div class="share-the-love-right">
-            <div class="social-detail facebook">
-              <p>Facebook</p>
-              <svg width="25px" viewBox="0 0 25 25">
-                <use href="#facebook_logo"></use>
-              </svg>
-              <p>Our daily feed.</p>
-              <button class="button">LIKE</button>
-            </div>
-            <div class="social-detail youtube">
+            <div class="social-detail youtube social">
               <p>YouTube</p>
               <svg height="25px" viewBox="0 0 25 25">
                 <use href="#youtube_logo"></use>
               </svg>
-              <p>See everything, hear everything.</p>
-              <button class="button">SUBSCRIBE</button>
+              <p class="description-1">See everything, hear everything.</p>
+              <button class="button subscribe">SUBSCRIBE</button>
             </div>
           </div>
         </div>
