--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </div>
         </div>
         <div class="today-text">
-          <h2>Title Text Here</h2>
+          <h2>Latitudes: Sometimes to One Hundred</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
@@ -205,7 +205,14 @@
         <div class="no-direct-flight-content-container">
           <div class="no-direct-flight content-card">
             <img src="./images/img-ndf.jpg" width="535" alt="" />
-            <h4>Title of Text</h4>
+            <h4>Photographers in Focus: Yushi Li</h4>
+            <p class="description-1">
+              Meet the Chinese artist turning the female gaze onto white men on Tinder
+            </p>
+          </div>
+          <div class="no-direct-flight content-card">
+            <img src="./images/img-ndf.jpg" width="535" alt="" />
+            <h4>Kiss of the Rabbit God</h4>
             <p class="description-1">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Doloremque reprehenderit quos
@@ -213,15 +220,7 @@
           </div>
           <div class="no-direct-flight content-card">
             <img src="./images/img-ndf.jpg" width="535" alt="" />
-            <h4>Title of Text</h4>
-            <p class="description-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Doloremque reprehenderit quos
-            </p>
-          </div>
-          <div class="no-direct-flight content-card">
-            <img src="./images/img-ndf.jpg" width="535" alt="" />
-            <h4>Title of Text</h4>
+            <h4>The Ultimate Samsara</h4>
             <p class="description-1">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Doloremque reprehenderit quos
@@ -437,7 +436,7 @@
           <div class="more-to-love-content-card">
             <img src="./images/img-mtl.jpg" alt="" width="300" />
             <div class="more-to-love-text">
-              <h3 class="more">Title of Text</h3>
+              <h4 class="more">Nick Cave: Forothermore</h4>
               <p class="description-1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
                 reprehenderit quos, ab rem fuga quasi dolor similique consequatur Lorem ipsum dolor sit, 
@@ -448,7 +447,7 @@
           <div class="more-to-love-content-card">
             <img src="./images/img-mtl.jpg" alt="" width="300" />
             <div class="more-to-love-text">
-              <h3 class="more">Title of Text</h3>
+              <h4 class="more">Title of Text</h4>
               <p class="description-1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
                 reprehenderit quos, ab rem fuga quasi dolor similique consequatur Lorem ipsum dolor sit, 
@@ -460,7 +459,7 @@
           <div class="more-to-love-content-card">
             <img src="./images/img-mtl.jpg" alt="" width="300" />
             <div class="more-to-love-text">
-              <h3 class="more">Title of Text</h3>
+              <h4 class="more">Title of Text</h4>
               <p class="description-1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
                 reprehenderit quos, ab rem fuga quasi dolor similique consequatur Lorem ipsum dolor sit, 
