connect and most watched layout line adjustments

--- a/index.html
+++ b/index.html
@@ -318,24 +318,28 @@
       <div class="line-border"></div>
 
       <div class="most-watched container">
-        <div class="most-watched-content-card">
-          <h3>MOST WATCHED</h3>
-          <img src="./images/image-test3.jpg" width="370" alt="" />
-          <h4>Title of Text</h4>
-          <p class="description-1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-            reprehenderit quos, ab rem fuga quasi dolor similique consequatur
-          </p>
+        <div class="most-watched-card container1">
+          <div class="most-watched-content-card">
+            <h3>MOST WATCHED</h3>
+            <img src="./images/image-test3.jpg" width="370" alt="" />
+            <h4>Title of Text</h4>
+            <p class="description-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+              reprehenderit quos, ab rem fuga quasi dolor similique consequatur
+            </p>
+          </div>
         </div>
 
-        <div class="most-watched-content-card">
-          <h3>MOST WATCHED</h3>
-          <img src="./images/image-test3.jpg" width="370" alt="" />
-          <h4>Title of Text</h4>
-          <p class="description-1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-            reprehenderit quos, ab rem fuga quasi dolor similique consequatur
-          </p>
+        <div class="most-watched-card container2">
+          <div class="most-watched-content-card">
+            <h3>MOST WATCHED</h3>
+            <img src="./images/image-test3.jpg" width="370" alt="" />
+            <h4>Title of Text</h4>
+            <p class="description-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+              reprehenderit quos, ab rem fuga quasi dolor similique consequatur
+            </p>
+          </div>
         </div>
       </div>
 
