fixed newsletter mobile spacing#

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
               </label>
 
               <p class="description-1">
-                I would like to receive the NOWNESS NEWSLETTER
+                I would like to receive the NOWNESS newsletter
               </p>
             </div>
 
