headline image overlay added using ::before

--- a/index.html
+++ b/index.html
@@ -122,17 +122,9 @@
     <div class="main-content">
       <div class="today container">
         <div class="headline-container">
-          <picture class="headline-image">
-            <source
-              media="(max-width: 599px)"
-              srcset="./images/img-today-s.jpg"
-            />
-            <source
-              media="(min-width: 600px)"
-              srcset="./images/img-today-l.jpg"
-            />
+          <div class="headline-img-container">
             <img src="./images/img-today-l.jpg" alt="today-image" />
-          </picture>
+          </div>
 
           <div class="play-circle">
             <img src="./icons/play-circle.svg" height="40px" />
