--- a/index.html
+++ b/index.html
@@ -87,17 +87,23 @@
             </svg>
           </h1>
           <div class="row1-header-right">
-            <svg class="icon" width="26px" viewBox="0 0 20 20">
-              <use href="#search_logo"></use>
-            </svg>
+            <div class="right-icons">
+              <svg class="icon" width="26px" viewBox="0 0 20 20">
+                <use href="#search_logo"></use>
+              </svg>
+            </div>
 
-            <svg class="icon" width="26px" viewBox="0 0 20 20">
-              <use href="#play_logo"></use>
-            </svg>
+            <div class="right-icons">
+              <svg class="icon" width="26px" viewBox="0 0 20 20">
+                <use href="#play_logo"></use>
+              </svg>
+            </div>
 
-            <svg class="icon" width="26px" viewBox="0 0 20 20">
-              <use href="#person_logo"></use>
-            </svg>
+           <div class="right-icons">
+              <svg class="icon" width="26px" viewBox="0 0 20 20">
+                <use href="#person_logo"></use>
+              </svg>
+           </div>
 
           </div>
         </div>
