fix of hamburger animation

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
             <input type="checkbox" id="hamburger-input" class="hidden" />
 
             <label for="hamburger-input">
-              <div class="Menu-container">
-                <div class="line" id="active"></div>
+              <div class="menu-container">
+                <i></i>
+                <i></i>
+                <i></i>
+                <!-- <div class="line" id="active"></div> -->
               </div>
             </label>
             <nav class="overlay-menu">
